# DRF

./: .gitignore  Dockerfile  Makefile  cloudbuild.prod.yaml  cloudbuild.staging.yaml  pyproject.toml  requirements-dev.txt
DRF/: settings.py  urls.py
DRF/api/: apps.py  models.py  serializers.py  urls.py  views.py
DRF/api/migrations/: 0001_initial.py
