[tool.poetry]
name = "DjangoRestProject"
version = "0.1.0"
description = "Reailize base structure of rest architucture"
authors = ["Elijah"]
license = "1@elijahOraclecontrol"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
djangorestframework = "^3.13.1"
flake8 = "^4.0.1"
Pygments = "^2.11.2"
httpie = "^3.0.2"
coreapi = "^2.3.3"
PyYAML = "^6.0"
coreapi-cli = "^1.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
